# jellyclient

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  ERRORS.md  FEATURES.md  LICENSE  LINUX.md  README.md  SCREENSHOTS.md  TODO.md  WINDOWS.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: macos-build.yml  windows-build.yml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: router.dart
lib/core/api/: jellyfin_client.dart
lib/core/providers/: app_providers.dart  watchlist_providers.dart
lib/core/services/: external_player.dart  platform_utils.dart
lib/core/storage/: server_storage.dart  settings_storage.dart  watchlist_storage.dart
lib/features/auth/: add_server_screen.dart  login_screen.dart  profiles_screen.dart  servers_screen.dart
lib/features/detail/: detail_screen.dart
lib/features/genre/: genre_screen.dart
lib/features/home/: home_screen.dart
lib/shared/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: DebugProfile.entitlements  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
portage/linux/: BUILD.md  install.sh  package.sh  uninstall.sh
portage/windows/: BUILD.md  CHANGES.md  build_portable.ps1
portage/windows/jellyclient-rs/: Cargo.toml  README.md
portage/windows/jellyclient-rs/.cargo/: config.toml
portage/windows/jellyclient-rs/src/: image_cache.rs  main.rs  player.rs
portage/windows/jellyclient-rs/src/api/: mod.rs  models.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
